syntax = "proto3";
import "google/protobuf/descriptor.proto";
package mapeo;

extend google.protobuf.MessageOptions {
  // This should be a hex-encoded 48-bit random number, and should never change
  // for a given message type. Generated with `openssl rand -hex 6`
  // It is designed to be globally unique, such that Mapeo can parse any
  // data blocks and ignore data types that it does not recognize.
  string dataTypeId = 50001 [retention = RETENTION_SOURCE];
  // This is a unique (within Mapeo) name for the message type.
  // Should be camelCase.
  string schemaName = 50002 [retention = RETENTION_SOURCE];
}
